# CMPT_433_Project

./: .gitignore  CMakeLists.txt  README.md
Client/: CMakeLists.txt
Client/app/: CMakeLists.txt
Client/app/include/: audioMixer.h  client.h  draw_stuff.h  shutdown.h  sound_effects.h  thread_manager.h
Client/app/src/: audioMixer.c  client.c  draw_stuff.c  main.c  shutdown.c  sound_effects.c  thread_manager.c
Client/hal/: CMakeLists.txt
Client/hal/include/: accelerometer.h  gpio.h  joystick.h  led.h  rotary_encoder.h
Client/hal/src/: accelerometer.c  gpio.c  joystick.c  led.c  rotary_encoder.c
Client/lcd/: LICENSE.txt
Client/lcd/examples/: LCD_0in96_test.c  LCD_1in14_test.c  LCD_1in3_test.c  LCD_1in47_test.c  LCD_1in54_test.c  LCD_1in9_test.c  LCD_2in4_test.c  LCD_2in_test.c
Client/lcd/lib/Config/: DEV_Config.c  DEV_Config.h  Debug.h
Client/lcd/lib/GUI/: GUI_Paint.h
Client/lcd/lib/LCD/: LCD_0in96.h  LCD_1in14.c  LCD_1in14.h  LCD_1in28.c  LCD_1in28.h  LCD_1in3.c  LCD_1in3.h  LCD_1in47.c  LCD_1in47.h  LCD_1in54.c  LCD_1in54.h  LCD_1in69.c  LCD_1in69.h  LCD_1in8.c  LCD_1in8.h  LCD_1in9.c  LCD_1in9.h  LCD_2inch.c  LCD_2inch.h  LCD_2inch4.c  LCD_2inch4.h
Client/lg/: rgpiod  rgs
Server/: CMakeLists.txt  main.cpp
Server/include/: Direction.h  Enemy.h  GameRender.h  GameServer.h  GameState.h  Shutdown.h  Tank.h
Server/src/: Enemy.cpp  GameRender.cpp  GameServer.cpp  GameState.cpp  Shutdown.cpp
